# Tesseract

./: .env.example  .gitignore  README.md  ai_pipeline.py  pyproject.toml  requirements.txt
ai/: __init__.py  ai_pipeline.py  test_ai.py  touch ai_pipeline.py
backend/: .env.example  __init__.py  app.py  database.py  models.py  requirements.txt  schemas.py  security.py
backend/ai/: __init__.py  model.py
backend/services/: __init__.py  auth_service.py  gemini_features.py  resume_analysis.py
backend/tests/: test_analyze_resume_api.py  test_auth_api.py  test_persistent_rank_api.py
backend/utils/: __init__.py  parser.py
frontend/: UI_Architecture.txt  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: CursorGlow.css  CursorGlow.jsx  Dashboard.css  Dashboard.jsx  Hero.css  Hero.jsx  Leaderboard.css  Leaderboard.jsx  Navbar.css  Navbar.jsx  ParticleBackground.css  ParticleBackground.jsx  UploadSection.css  UploadSection.jsx
frontend/src/components/Auth/: Auth.css  AuthModal.jsx
frontend/src/components/InterviewQuestions/: InterviewQuestions.css  InterviewQuestions.jsx
frontend/src/components/JDParser/: JDParser.css  JDParser.jsx
frontend/src/components/RecruiterChat/: RecruiterChat.css  RecruiterChat.jsx
frontend/src/context/: AuthContext.jsx
